--- a/profile.html
+++ b/profile.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>profile</title>
 </head>
 <body>
-    <h1>SE5555</h1>
+    
 </body>
 </html>
